fixed incorrect src

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Anyways, Enjoy!
 Before i suggest possible solutions and-or fixes to the proposed and current ui, we should take a moment to analyse the function of the <c>mobile UI</c> that is in place today.
 
 <section class="img-container">
-    <img src="/img/current UI.jpg">
-    <img src="/img/original ui expanded.png">
+    <img src="img/current UI.jpg">
+    <img src="img/original ui expanded.png">
 </section>
 
 The two examples shown here are the current UI for mobile, one minimised, the other expanded.
@@ -153,7 +153,7 @@ For each Power panel we would have a minimised version for ease of use and a <c>
 This was my <c>rudementary</c> Analasys and Suggestions to the UI of OSRS.
 
 <section>
-    <img src="/img/final.png">
+    <img src="img/final.png">
 </section>
 Usually I would do <c>A-B tests</c>, do interviews with a sample group, look at analytical data and generate a <c>heatmap</c> accordingly, design a flowchart and take all interfaces in account while doing these analasys. today i have just <c>focussed on the direct UI</c> and the user experience within.
 
