--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="#intro">Intrduction.</a></li>
             <li><a href="#analasys">Analasys.</a></li>
             <li><a href="#suggestion">Suggestion.</a></li>
+            <li><a href="#vertical">vertical UI.</a></li>
             <li><a href="#conclusion">Conclusion.</a></li>
         </ul>
         <pre id="intro" class="output"><h3>Intro.</h3>
@@ -147,6 +148,23 @@ we can <c>populate</c> the power panel with information about slayer, your home 
 
 For each Power panel we would have a minimised version for ease of use and a <c>maximised version</c> for more nuanced control and information.
 </pre>
+        <pre id="vertical" class="output">
+    <h4>Vertical UI</h4>
+One of the request by the developers was to have mockups suggested to them.
+
+The suggestions i made are easilly adaptable for mobile applications, for your inconspicuous gaming needs.
+    <section>
+        <img src="img/vertical.png">
+    </section>
+
+Most of the elements can be rotated and repositioned. But the inventory and relative panels should also be scaled to fit the width of the device. The above example should fit most 16x9 and 21x9 screens. The power panel and the chat buttons are moved above the stones.
+    
+The chatbox, the extended panels and the extended chat are aligned above the inventory panel as to not obfuscate the inventory.
+
+I think this will be a better solution to a vertical UI.
+    
+</pre>
+
 
         <pre id="conclusion" class="output">
     <h4>Conclusion.</h4>
