fixed gramatical errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <ul>
             <li><a href="#intro">Intrduction.</a></li>
-            <li><a href="#analasys">Analasys.</a></li>
+            <li><a href="#analysis">Analysis.</a></li>
             <li><a href="#suggestion">Suggestion.</a></li>
             <li><a href="#vertical">vertical UI.</a></li>
             <li><a href="#conclusion">Conclusion.</a></li>
@@ -31,17 +31,17 @@
         <pre id="intro" class="output"><h3>Intro.</h3>
 Just to start, let me introduce myself. 
 
-I am Odinn, A Graphics Gesigner for <c>10+</c> years from the Netherlands specialized in UI/UX since 2018.
+I am Odinn, A Graphics Gesigner for <c>10+</c> years from the Netherlands specializing in UI/UX since 2018.
 One of my hobbies is playing and getting endulged with <c>OSRS</c> and its lore.
 
-The love for this game, my itches for graphics design, <a href="https://secure.runescape.com/m=news/proposed-mobile-user-interface-changes?oldschool=true">and the latest blog post Proposing a redesign</a> for the mobile UI made me do this writeup. 
+As a Graphic Designer who has a passion for this game, <a href="https://secure.runescape.com/m=news/proposed-mobile-user-interface-changes?oldschool=true">after reading runescapes Blog post about ui overhaul</a>, I created a proposal redesigning the games mobile UI.
 
-I would like to preface this article with the message that this is a very subjective and rudementary analasys and write up, conventionally there are many more aspects to look at and things to do, this does not provide an accurate explanation of what a UX specialist does.
+I would like to preface this article with the message that this is a very subjective and rudementary analysis and write up, conventionally there are many more aspects to look at and things to do, this does not provide an accurate explanation of what a UX specialist does.
 
 Anyways, Enjoy!
 </pre>
 
-        <pre id="analasys" class="output"><h3>Analasys.</h3>
+        <pre id="analysis" class="output"><h3>analysis.</h3>
 Before i suggest possible solutions and-or fixes to the proposed and current ui, we should take a moment to analyse the function of the <c>mobile UI</c> that is in place today.
 
 <section class="img-container">
@@ -92,7 +92,7 @@ The chat controls, however are a step in the <c>right direction</c>, they obfusc
 
         <pre id="suggestion" class="output">
 <h4>Suggestions.</h4>
-So with the analasys taken in concideration. lets take a look at some suggestions, and build it up from a clean slate.
+So with the analysis taken in concideration. lets take a look at some suggestions, and build it up from a clean slate.
 
 <section>
     <img src="img/no-ui.png" alt="">
@@ -168,14 +168,14 @@ I think this will be a better solution to a vertical UI.
 
         <pre id="conclusion" class="output">
     <h4>Conclusion.</h4>
-This was my <c>rudementary</c> Analasys and Suggestions to the UI of OSRS.
+This was my <c>rudementary</c> analysis and Suggestions to the UI of OSRS.
 
 <section>
     <img src="img/final.png">
 </section>
-Usually I would do <c>A-B tests</c>, do interviews with a sample group, look at analytical data and generate a <c>heatmap</c> accordingly, design a flowchart and take all interfaces in account while doing these analasys. today i have just <c>focussed on the direct UI</c> and the user experience within.
+Usually I would do <c>A-B tests</c>, do interviews with a sample group, look at analytical data and generate a <c>heatmap</c> accordingly, design a flowchart and take all interfaces in account while doing these analysis. today i have just <c>focussed on the direct UI</c> and the user experience within.
 
-Thank you for reading thorugh my <c>rambling</c> and making it to the end of this writeup. I hope i have informed you with my analasys, and hope that the suggestions that were made will help you develop a <c>more user friendly UI</c> while still including the powerpanel in a neat and nice way.
+Thank you for reading thorugh my <c>rambling</c> and making it to the end of this writeup. I hope i have informed you with my analysis, and hope that the suggestions that were made will help you develop a <c>more user friendly UI</c> while still including the powerpanel in a neat and nice way.
 
 Thank you <c>Jagex</c> for makign a game for me and many others to relive our <c>nostalgia</c> and experience new challenges.
 </pre>
