--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ One of my hobbies is playing and getting endulged with <c>OSRS</c> and its lore.
 
 As a Graphic Designer who has a passion for this game, <a href="https://secure.runescape.com/m=news/proposed-mobile-user-interface-changes?oldschool=true">after reading runescapes Blog post about ui overhaul</a>, I created a proposal redesigning the games mobile UI.
 
-I would like to preface this article with the message that this is a very subjective and rudementary analysis and write up, conventionally there are many more aspects to look at and things to do, this does not provide an accurate explanation of what a UX specialist does.
+I would like to preface this article by saying that this is a very subjective and rudimentary overview, conventionally there are  more aspects, research, and processes involved in UX to make this an accurate analysis.
 
 Anyways, Enjoy!
 </pre>
