--- a/index.html
+++ b/index.html
@@ -42,33 +42,30 @@ Anyways, Enjoy!
 </pre>
 
         <pre id="analysis" class="output"><h3>analysis.</h3>
-Before i suggest possible solutions and-or fixes to the proposed and current ui, we should take a moment to analyse the function of the <c>mobile UI</c> that is in place today.
+Before i suggest possible solutions and/or fixes to the proposed and current ui, we should take a moment to analyse the function of the <c>mobile UI</c> that is in place today.
 
 <section class="img-container">
     <img src="img/current UI.jpg">
     <img src="img/original ui expanded.png">
 </section>
 
-The two examples shown here are the current UI for mobile, one minimised, the other expanded.
+The two examples shown here are the current UI for mobile, one minimized and the other expanded.
 note that the <c title="the rectangular panel on the right with interactable items within">Inventory Panel</c> will switch sides to which <c title="the square buttons on each side of the screen to hide/show specific panels">'stone'</c> is selected.
 
-The function of the current UI is to serve the Desktop experience to a handheld platform. 
-This it did well, it keeps the <c title="the nostalgic pre-2007 runescape feel">OS</c> feel and looks with variations fitting for mobile. 
-the <c title="the textbox with messages from the game or players respectively">chat placement</c>, the vertical layout of the stones and the switching sides of the Inventory Pannel bring in the functionallity from Desktop in an expected way to mobile.
+The mobile application does an excellent job creating a <c>seamless experience</c> with the desktop version while keeping the Old school feel by integrating a UI that displays a <c>vertical layout</c> of stones, a dynamic inventory panel, and the chat.
 
-<c title="JAMFLEX">Jagex</c> presented these functions in a respectable manner, is this the correct way to do that? That's what i hope to answer in this writeup.
+
+<c title="JAMFLEX">Jagex</c> presented these functions in a respectable manner, but is this the correct way to do that? That's what I hope to answer in this writeup.
 
 <h4>Heatmap.</h4>
 <section><img src="img/heatmap.png"></section>
-<r>note without actual data the heatmap image is speculation based on personal experience and importance of UI elements, and other factors explained later.</r>
-
 With the presented heatmap i would like to illustrate the importance of elements, and to show where the <c>focus</c> is requested during regular gameplay.
 
-The most important elements arguably are the <c>inventory panel, the prayer panel and the spellbook panel</c>. these panels are core to succesfull gameplay and require frequent focus from the player; during battle to heal, pray and <c>gear switch</c>, during bankstanding to hig-alc and craft, and last but not least, to travel and explore throught the game. if any of these three panels are omitted the game could not function properly.
+The most important elements arguably are the <c>inventory, prayer and the spellbook panel</c>. these panels are core to succesfull gameplay and require frequent focus from the player; during battle (to heal, pray and <c>gear switch</c>), during bankstanding to hig-alc and craft, and last but not least, to travel and explore throughout the game. if any of these three panels are omitted the game could not function properly.
 
-Now looking at the <c>hotspots</c> your focus is spread out throughout the entire screen, from left to right and through the middle. 
+Looking at the <c>hotspots</c> your focus is spread out throughout the entire screen, from left to right and through the middle. 
 
-The better part of this layout is that both sides of the screen are used so a palyer can use both hands to perform actions. sadly this is hindered by the need to switch panels. this requires the player to <c>refocus sporadically</c> on the specific elements, which is amplified with the size of some spells, items and status orbs. 
+The better part of this layout is that both sides of the screen are used so a player can use both hands to perform actions. Sadly, this is hindered by the need to switch panels, requiring the player to <c>refocus sporadically</c> on specific elements, which are amplified with the size of some spells, items and status orbs. 
 
 The players eye travels quite the <c>distance</c> during gameplay and with that one could lose focus on the objective at hand.
 
@@ -77,60 +74,57 @@ The players eye travels quite the <c>distance</c> during gameplay and with that 
     <img src="img/Mobile_3.png" alt="" srcset="">
     <img src="img/heatmap new ui.png" alt="" srcset="">
 </section>
-With the proposed UI the focus shifts and shrinks, to the right and center.
-this allows for new UI elements.
-in this case it allows for extended control settings a dedicated logout button and a section for a <c title="area for more information that power users need for efficient gameplay.">'Power User Panel'</c>.
+With the proposed UI, the focus shifts and shrinks, to the right and center.
+this allows for new UI elements, extended control settings, a dedicated logout button, and a section for a <c title="area for more information that power users need for efficient gameplay.">'Power User Panel'</c>.
 
 The Chat box changes to a more vertical control scheme, shrinking the F pattern covering the chat and the rest of the left side.
-<c><sub> F pattern is the usual read direction of prominently a western person. this creates inherent heat spots.</sub></c>
-This again eleviates the focus and eye travel, to allow faster focus on more important things.
 
-However! Now with the relieved space, the new Toutch controls and the dedicated logout button unnessarily <c>clutter</c> up the won realestate.
+These changes alleviates the eye focus and travel, to allow faster focus on more important things.
 
-The chat controls, however are a step in the <c>right direction</c>, they obfuscate the previous eassily accessible buttons (some more usefull than others).
+However! Now with the relieved space, the new toutch controls and the dedicated logout button unnessarily <c>clutter</c> up the won real-estate.
+
+The chat controls, are a step in the <c>right direction</c>, they obfuscate the previous eassily accessible buttons (some more usefull than others).
 </pre>
 
         <pre id="suggestion" class="output">
 <h4>Suggestions.</h4>
-So with the analysis taken in concideration. lets take a look at some suggestions, and build it up from a clean slate.
+So with the analysis taken in concideration. let's take a look at some suggestions and build it up from a clean slate.
 
 <section>
     <img src="img/no-ui.png" alt="">
 </section>
-Hiding all the UI elements shows how much <c>real estate</c> we have to work with. The player now can purely focus on the character and it's enviroment. 
-However, as discussed before we need a few elements to have a <c>functioning game</c>. The inventory, the data orbs and the panel stones.
+Hiding all the UI elements shows how much <c>real-estate</c> we have to work with. The player now can purely focus on the character and their enviroment. 
+However, as discussed before we need a few elements to have a <c>functioning game</c>, the inventory, the data orbs and the panel stones.
 
-The first think i would like to add are the <c>Stones and the data orbs!</c>
+The first element I would like to add are the <c>Stones and the data orbs!</c>
 
 <section>
     <img src="img/stage-1.png">
 </section>
-For the data orbs, the suggested ones sorts them in a <c>neater and more intuitive</c> manner. than the current minimised version. note the minimap can be brought back with the globe button.
+The suggested ones sorts them in a <c>neater and more intuitive</c> manner than the current minimised version. 
 
 The stones I decided to use are the ones form the suggested UI. The order of the stones make the distinction between the <c>primary</c> (inventory, prayer, magic, attack styles)
-and <c>the secondary stones</c> (Exp, emotes, friends/clan list, acc settings, more) and allows the user to collapse the stones to just the primary.
+and <c>the secondary stones</c> (Exp, emotes, friends/clan list, acc settings, more) allowing the user to collapse the stones to just the primary.
 
-<sub>Sadly this does not allow us to use both of our hands. If we could have multiple panels open at the same time this would be the best, but this is in direct conflict to what we expect from the Desktop interface.</sub>
-
-There's a <c>lot of good</c> about the new ui, however lets nuke the dedicated logout button and controls, and come back to it later, but bring just the powerpanel button back. I would also like to concolidate all chat buttons to a <c>single one</c>. 
+There's a <c>lot of good</c> about the new ui, however lets nuke the dedicated logout button and controls, and come back to it later, but instead bring just the powerpanel button back. I would also like to concolidate all chat buttons to a <c>single one</c>. 
 
 <section>
     <img src="img/stage-2.png" alt="">
 </section>
 One of the stronger elements in the new UI is the existence of the <c>Power Panel</c>, this deserves to stay, but should be used for more than just information.
 
-The chat I suggest would, like in minecraft, <c>pop up and fade</c> away with a max of four lines. 
-now obviously sometimes you want to read back to what is said or what happened in game. we can like with the powerpanel <c>expand it</c> by clicking on the button in the top left, this will show an <c>extended chat box</c> with tabs and allows you to chat with the players around you.
+Like in Minecraft, I suggest the chat would <c>pop up and fade</c> away with a max of four lines. 
+Now obviously sometimes you want to read back to what is said or what happened in game. we can <c>expand it</c> by clicking on the button in the top left like with the powerpanel). This will show an <c>extended chat box</c> with tabs and allows you to chat with the players around you.
 
 <section>
     <img src="img/stage-3.png" alt="">
     <img src="img/stage-4.png" alt="">
 </section>
-In the first image you see the <c>minimised</c> Power pannel, in the case of exp it would only show the specefied tracker, be it total exp, or any of the specific skills. 
-This is to <c>limit the clutter</c> of the screen but can be expanded to show the other capabilities of the powerpanel.
+In the first image you see the <c>minimised</c> Power pannel, in the case of EXP, it would only show the specefied tracker, be it total EXP or any of the specific skills. 
+This is to <c>limit the clutter</c> on the screen but can be expanded to show the other capabilities of the powerpanel.
 the first image also shows us the <c>fading chat bar</c> now with only the last message visible.
 
-The second image shows us the expanded chat bar with all the tab buttons and <c>archive</c> and allows the player to chat. It also allows us to set a filter or limit the chat to one <c>specific category</c> of messages.
+The second image shows us the expanded chat bar with all the tab buttons, <c>archive</c> and allows the player to chat. It also allows us to set a filter or limit the chat to one <c>specific category</c> of messages.
 
 <section>
     <img src="img/stage-5.png" alt="">
@@ -140,19 +134,19 @@ The <c>Power Panel</c> provides us with a new way to interact with the game thro
 
 The power panel could also provide us with an area where we could move specific <c>settings and controls</c>, like the game settings and the world switcher & logout button.
 
-My suggestion for the <c>world switcher</c> is the following.
-for the minimised bar, have a direct logout button and 2 of your <c>favorite worlds</c> for quick a quick hop.
-for the extended version we could bring in the full <c>filterable</c> world list for easier navigation through the different worlds.
+I suggest the following for the <c>world switcher</c>,
+a minimised bar with a direct logout button and 2 of your <c>favorite worlds</c> for a quick hop.
+For the extended version we could bring in the full <c>filterable</c> world list for easier navigation through the different worlds.
 
-we can <c>populate</c> the power panel with information about slayer, your home build options, it could <c>provide statistics</c> about the latest loot you collected, or information about your party, it can be <c>used for so much</c> more than just raw information.
+We can <c>populate</c> the power panel with information about slayer, your home build options, it could <c>provide statistics</c> about the latest loot you collected, or information about your party, it can be <c>used for so much</c> more than just raw information.
 
 For each Power panel we would have a minimised version for ease of use and a <c>maximised version</c> for more nuanced control and information.
 </pre>
         <pre id="vertical" class="output">
     <h4>Vertical UI</h4>
-One of the request by the developers was to have mockups suggested to them.
+One of the request by the developers was to have mockups for a vertical layout suggested to them.
 
-The suggestions i made are easilly adaptable for mobile applications, for your inconspicuous gaming needs.
+The suggestions I made are easilly adaptable for mobile applications, for your inconspicuous gaming needs.
     <section>
         <img src="img/vertical.png">
     </section>
@@ -168,12 +162,11 @@ I think this will be a better solution to a vertical UI.
 
         <pre id="conclusion" class="output">
     <h4>Conclusion.</h4>
-This was my <c>rudementary</c> analysis and Suggestions to the UI of OSRS.
+Usually I would do <c>A-B tests</c>, do interviews with a sample group, look at analytical data and generate a <c>heatmap</c> accordingly, design a flowchart and take all interfaces in account while doing these analysis. Today i have just <c>focussed on the direct UI</c> and the user experience within.
 
-<section>
+    <section>
     <img src="img/final.png">
 </section>
-Usually I would do <c>A-B tests</c>, do interviews with a sample group, look at analytical data and generate a <c>heatmap</c> accordingly, design a flowchart and take all interfaces in account while doing these analysis. today i have just <c>focussed on the direct UI</c> and the user experience within.
 
 Thank you for reading thorugh my <c>rambling</c> and making it to the end of this writeup. I hope i have informed you with my analysis, and hope that the suggestions that were made will help you develop a <c>more user friendly UI</c> while still including the powerpanel in a neat and nice way.
 
