--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OSRS UX Writeup</title>
     <meta name="description" content="Old School Runescape User Experience writeup">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon//favicon-16x16.png">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fab005">
+    <meta name="apple-mobile-web-app-title" content="Anagrammar">
+    <meta name="application-name" content="Anagrammar">
+    <meta name="msapplication-TileColor" content="#fab005">
+    <meta name="theme-color" content="#fab005">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/open-props">
     <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css">
